Bug 1830145 - Cache search results tables and charsets. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D230233

--HG--
extra : moz-landing-system : lando